--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,13 @@
 plugins {
     id 'java'
+    id 'application'
 }
 
 group 'News-Portal'
 version '1.0-SNAPSHOT'
+
+//mainClassName = 'App'
+
 
 sourceCompatibility = 1.8
 
@@ -20,5 +24,5 @@ dependencies {
     compile 'com.google.code.gson:gson:2.5'  // to be explained shortly
 }
 
-//mainClassName = 'App'
+mainClassName = 'App'
 
